<resources>
    <string name="app_name">Figuras</string>
    <string name="titulo_opciones">Opciones</string>
    <string name="opciones_area">Areas</string>
    <string name="opciones_volumenes">Volúmenes</string>
    <string name="opciones_operaciones_realizadas">Operaciones Realizadas</string>
    <string name="titulo_ope_realizadas">Realizadas</string>
    <string name="titulo_volumenes">Volúmenes</string>
    <string name="titulo_areas">Áreas</string>
    <string name="cilindro">Cilindro</string>
    <string name="esfera">Esfera</string>
    <string name="cono">Cono</string>
    <string name="cubo">Cubo</string>
    <string name="valor_lado">Valor del Lado</string>
    <string name="calcular">Calcular</string>
    <string name="borrar">Borrar</string>
    <string name="resultado">Resultado</string>
    <string name="ok">OK</string>
    <string name="numero">No.</string>
    <string name="operacion">Operación</string>
    <string name="datos">Datos</string>
    <string name="area_del_cuadrado">Area del Cuadrado</string>
    <string name="lado">Lado</string>
    <string name="base">Base</string>
    <string name="altura">Altura</string>
    <string name="rectangulo">Rectangulo</string>
    <string name="cuadrado">Cuadrado</string>
    <string name="triangulo">Triángulo</string>
    <string name="areas">Area</string>
    <string name="area_del_rectangulo">Area del Rectangulo</string>
    <string name="area_del_triangulo">Area del Triángulo</string>
    <string name="radio">Radio</string>
    <string name="area_del_circulo">Area del Círculo</string>
    <string name="circulo">Círculo</string>
    <string name="volumen_de_esfera">Volúmen de la Esfera</string>
    <string name="volumenes">Volumen</string>
    <string name="volumen_de_cilindro">Volúmen de Cilindro</string>
    <string name="volumen_de_cono">Volumen del Cono</string>
    <string name="volumen_de_cubo">Volúmen del Cubo</string>
    <string name="ingrese_radio">Ingrese radio</string>
    <string name="ingrese_lado">Ingrese lado</string>
    <string name="ingrese_altura">Ingrese altura</string>
    <string name="ingrese_base">Ingrese base</string>

    <string-array name="opciones">
        <item>@string/opciones_area</item>
        <item>@string/opciones_volumenes</item>
        <item>@string/opciones_operaciones_realizadas</item>
    </string-array>

    <string-array name="areas">
        <item>@string/cuadrado</item>
        <item>@string/rectangulo</item>
        <item>@string/triangulo</item>
        <item>@string/circulo</item>
    </string-array>

    <string-array name="volumenes">
        <item>@string/esfera</item>
        <item>@string/cilindro</item>
        <item>@string/cono</item>
        <item>@string/cubo</item>
    </string-array>


</resources>